<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="30dp"
    android:layout_marginEnd="30dp"
    android:layout_gravity="center"
    app:strokeColor="@color/blue"
    app:strokeWidth="3dp"
    app:cardCornerRadius="20dp"
    android:background="@drawable/notification_form"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/dialogHeader"
            style="@style/dialogText"
            android:layout_marginTop="20dp"
            android:text="@string/beforeDeleteQuestion"
            android:textSize="25sp"
            android:layout_marginBottom="5dp"
            />
        <TextView
            android:id="@+id/explanationText"
            style="@style/dialogText"
            android:layout_marginTop="5dp"
            android:text="@string/setDeleteInfo"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginBottom="30dp"
            android:textColor="@color/strong_grey"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesDeleteSet"
            android:textSize="15sp"
            android:fontFamily="@font/organo"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/green"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/noDeleteSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cleanData"
            android:fontFamily="@font/organo"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/crimson"
            />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>
