<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="50dp"
    android:layout_marginEnd="50dp"
    android:layout_gravity="center"
    app:strokeColor="@color/blue"
    app:strokeWidth="3dp"
    app:cardCornerRadius="20dp"
    android:background="@drawable/notification_form">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moveHeader"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_bold"
            />
        <Spinner
            android:id="@+id/setsToMove"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/yesMove"
            android:layout_column="0"
            android:layout_row="2"
            android:fontFamily="@font/organo"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="@color/green"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/noMove"
            android:layout_column="0"
            android:layout_row="3"
            android:textSize="15sp"
            android:fontFamily="@font/organo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:backgroundTint="@color/crimson"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            />
    </GridLayout>

</com.google.android.material.card.MaterialCardView>
